# webpages

./: .editorconfig  .env-example  .gitignore  Makefile  README.md  manage.py  pyproject.toml
appchallenges/: apps.py  urls.py  views.py
appchallenges/templates/appchallenges/: challenge.html  index.html
appchallenges/templates/appchallenges/includes/: header.html
templates/: 404.html  base.html
webpages/: asgi.py  settings.py  urls.py  wsgi.py
