[tool.poetry]
name = "webpages"
version = "0.1.0"
description = ""
authors = ["vikornienko <vikornienko76@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.3"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
pytest-django = "^4.5.2"
pytest-selenium = "^4.0.1"
flake8-django = "^1.3"
black = "^23.7.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
